invalid_sym_arg_keywords_test/invalid_sym_arg_keywords_test_5.src
.IPPcode24
WRITE string